# kokoro-gtk

./: README.md  build-linux.sh  build-macos.sh  main.py  pyproject.toml  settings.py  setup-dev.sh  tts_installer.py  xtts-gtk.spec
.github/workflows/: build.yml
hooks/: runtime_hook_gtk.py
