[project]
name = "xtts-gtk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygobject>=3.52.3",
    "pypinyin>=0.55.0",
]

[project.optional-dependencies]
tts = [
    "coqpit-config>=0.2.1",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
